--- a/src/less/components/article_list.less
+++ b/src/less/components/article_list.less
@@ -1,4 +1,6 @@
 .article-list {
+    padding: 0;
+
     article {
         @media only screen and (min-width: @screen-tablet) {
             header {
@@ -9,6 +11,25 @@
         background: @background-gray; 
         //padding: 2em 1em;
         margin-bottom: 2.5em;
+
+        @media only screen and (min-width: @screen-tablet) and (max-width: 1024px) {
+            &:before, &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 9999px;
+            }
+
+            &:before {
+                left: 100%;
+            }
+
+            &:after {
+                right: 100%;
+            }
+        }
+
 
         .article-image {
             float: left; 
@@ -25,8 +46,12 @@
             color: @background-orange;
             width: 70%;
 
-            @media only screen and (min-width: @screen-tablet) {
+            @media only screen and (min-width: @screen-tablet) and (max-width: 1024px) {
                 width: 90%; 
+            }
+
+            @media only screen and (min-width: @screen-desktop) {
+                width: 85%; 
             }
         }
 
@@ -42,10 +67,22 @@
 
         &:nth-child(even) {
             background: @background-gray2; 
+
+            @media only screen and (min-width: @screen-tablet) and (max-width: 1024px) {
+                &:before, &:after {
+                    background: @background-gray2; 
+                } 
+            }
         }
 
         &:nth-child(odd) {
             background: @background-gray; 
+
+            @media only screen and (min-width: @screen-tablet) and (max-width: 1024px) {
+                &:before, &:after {
+                    background: @background-gray; 
+                } 
+            }
         }
     }
 
@@ -54,5 +91,93 @@
             padding-left: 1em;
             padding-right: 1em; 
         } 
+    }
+}
+
+.article-list-dictionary {
+    .article-content {
+        font-style: italic; 
+    }    
+
+    .dictionary-item {
+        padding-left: 2.5em; 
+
+        &:first-child {
+            padding-left: 0; 
+        }
+    }
+
+    article {
+        &:nth-child(even) {
+            background: @background-gray; 
+
+            @media only screen and (min-width: @screen-tablet) and (max-width: 1024px) {
+                &:before, &:after {
+                    background: @background-gray; 
+                } 
+            }
+        }
+        
+        .article-heading {
+            text-decoration: none;
+            float: none; 
+            width: auto;
+            text-align: left; 
+        }
+    }
+}
+
+.article-list-articles {
+    article {
+        .article-image {
+            width: 250px;
+            margin: 0 auto; 
+            float: none;
+            margin-bottom: 1.25em;
+
+            img {
+                max-width: 100%; 
+            }
+
+            @media only screen and (min-width: @screen-tablet) {
+                width: 41.66666667%;
+                float: left; 
+            }
+        } 
+
+        .article-heading {
+            float: none;
+            width: auto;
+            margin-bottom: 1.25em;
+
+            @media only screen and (min-width: @screen-tablet) {
+                width: 58.33333333%;
+                float: right; 
+                padding-left: 30px;
+                text-align: left; 
+            }
+        }
+
+        .article-content {
+            @media only screen and (min-width: @screen-tablet) {
+                width: 58.33333333%;
+                float: right;
+                padding-left: 30px;
+            }
+
+            a {
+                font-size: 1em; 
+            }
+
+            font-style: italic;
+
+            
+            margin: 0; 
+           
+        }
+    }
+
+    article.section {
+        padding-bottom: 3em; 
     }
 }
